[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pynamodb = "^5.3.4"

[tool.poetry.dev-dependencies]
moto = "^4.1.0"
httpx = "^0.23.3"
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
